build: use jlink instead of manual method to build packaged JRE (appimage)